<resources>
    <string name="app_name">InClass04</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_image">welcome_image</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="name_value">Name</string>
    <string name="email_label">Email:</string>
    <string name="email_value">Email</string>
    <string name="id_label">ID:</string>
    <string name="id_hint">ID</string>
    <string name="dept_label">Dept:</string>
    <string name="select_dept_button">Select</string>
    <string name="submit">Submit</string>
    <string name="CS_Dept">Computer Science</string>
    <string name="SIS">SIS</string>
</resources>